--- a/portfolio-2022/package.json
+++ b/portfolio-2022/package.json
@@ -14,12 +14,14 @@
     "@sanity/image-url": "^1.0.1",
     "framer-motion": "^7.3.6",
     "next": "12.3.1",
+    "next-images": "^1.8.4",
     "next-sanity": "^1.0.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.36.1",
     "react-simple-typewriter": "^4.0.2",
-    "react-social-icons": "^5.14.0"
+    "react-social-icons": "^5.14.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
